# SimpleEngine

./: .gitignore  CMakeLists.txt  README.md  functions.cmake
engine/: CMakeLists.txt  ObjectPool.hpp  SimpleEngine.hpp  TypeMask.hpp  Utility.hpp
game/: AssetLoader.cpp  AssetLoader.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  Main.cpp  Physics.cpp  Physics.hpp  Renderer.cpp  Renderer.hpp  SystemInterface.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.hpp
include/: CMakeLists.txt  EntityManager.hpp  EventHandler.hpp  ObjectPool.hpp  SimpleEngine.hpp  TypeMask.hpp  Utility.hpp
test/: CMakeLists.txt  Collider.cpp  Collider.hpp  Config.hpp  Controller.cpp  Controller.hpp  DebugDraw.hpp  Main.cpp  Model.hpp  Physics.cpp  Physics.hpp  RenderCoords.hpp  Renderer.cpp  Renderer.hpp  SystemInterface.hpp  Transform.cpp  Transform.hpp  Window.hpp
