cmake_minimum_required(VERSION 3.4)

project("SimpleEngine" C CXX)

set(CMAKE_CXX_STANDARD 17)

include("functions.cmake")

option(SIMPLEENGINE_TESTING "SimpleEngine tests" ON)

add_subdirectory("include")

add_subdirectory("thirdparty")

if(SIMPLEENGINE_TESTING)
	set_property(GLOBAL PROPERTY USE_FOLDERS ON)

	if(MSVC)
		foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
			string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
			set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/bin")
			set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/bin")
			set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_SOURCE_DIR}/bin")
		endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
	else(MSVC)
		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
	endif(MSVC)
	
	add_subdirectory("test")
endif(SIMPLEENGINE_TESTING)
	
	
	
	